2006-02-06  Don Allingham  <don@gramps-project.org>
	* src/EditFamily.py: Complete save operation, handle new family
	* src/EditMedia.py: Add file selector button
	* src/FamilyList.py: Save properly
	* src/edit_person.glade: lock icon
	* src/gramps.glade: file selector button

2006-02-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (transaction_commit): Typo.

2006-02-05  Don Allingham  <don@gramps-project.org>
	* src/AttrEdit.py: remove unused parameters
	* src/EditFamily.py: start apply operation, data saving
	* src/DisplayModels.py: handle places correctly
	* src/DisplayTabs.py: Add LocationTab
	* src/EditPlace.py: update to use DisplayTabs
	* src/ImageSelect.py: remove SelectObject
	* src/LocEdit.py: use DisplayManager
	* src/gramps.glade: update editors
	* src/GrampsDb/_GrampsDbBase.py: use db_is_open
	* src/RelLib/_Place.py: typo
	
2006-02-04  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: removed
	* src/ListBox.py: removed
	* src/TransTable.py: removed
	* src/AddSpouse.py: removed
	* src/Marriage.py: removed
	* src/AddMedia.py: relative path support
	* src/AddrEdit.py: add DisplayTab support
	* src/DdTargets.py: repository references support
	* src/DisplayTabs.py: repository reference support
	* src/EditMedia.py: save support
	* src/EditSource.py: save support
	* src/ImageSelect.py: remove unused stuff
	* src/Sources.py: use object instead of gobject.TYPE_PYOBJECT
	* src/Utils.py: relative path calculator
	* src/ViewManager.py: change cwd to directory of the file so that
	relative paths work
	* src/edit_person.glade: fix size
	* src/gramps.glade: add relative path indicator
	* src/GrampsDb/_ReadGedcom.py: remove useless comparea

2006-02-03  Don Allingham  <don@gramps-project.org>
	* src/AttrEdit.py: use DisplayTabs
	* src/NameEdit.py: use DisplayTabs
	* src/gramps.glade: use DisplayTabs
	* src/DisplayTabs.py: Handle notes properly
	* src/EventEdit.py: commit modified events