@@ -1,4 +1,8 @@
 2006-02-06  Don Allingham  <don@gramps-project.org>
+	* src/SourceView.py: fix source query dialog
+	* src/ansel_utf8.py: fix unicode conversion
+	* src/GrampsDb/_GrampsDbBase.py: fix surname detection
+	* src/GrampsDb/_ReadGedcomp.py: fix note importation
 	* src/EditFamily.py: Complete save operation, handle new family
 	* src/EditMedia.py: Add file selector button
 	* src/FamilyList.py: Save properly
